# Wild_Adventure

./: CMakeLists.txt  CMakeUserPresets.json.example  CODESTYLE.md  LICENSE  README.md
assets/shaders/: blur.frag  color_grading.frag
data/: audio.json  chicken.json  input.json  input_default.json  particles.json  settings.json
data/levels/: Terrain.tsx  backgrounds.json  color_grading.json  game_textures.json  level_1.tmj  level_2.tmj  level_3.tmj  level_4.tmj  level_5.tmj  level_6.tmj  level_7.tmj  lighting.json  menu_background_level.tmj  music.json  splash_level_tilemap.tmj  splash_textures.json  test_level.json  test_level.tmj  test_tilemap.tmj
data/prefabs/: appear_effect.json  apple.json  arrow.json  bananas.json  bee.json  blueBird.json  checkpoint.json  cherries.json  chicken.json  disappear_effect.json  finish.json  fire.json  ghost.json  kiwi.json  melon.json  menuChicken.json  metalBox.json  mushroom.json  orange.json  pineapple.json  plant.json  player.json  rockHead.json  spikes.json  start.json  trunk.json  woodEasyBox.json  woodHardBox.json
data/scenes/: showcase.json
data/ui/: hud.json  test_menu.json
src/: Application.cpp  Application.h  Context.h  Game.cpp  Game.h  main.cpp
src/audio/: Mixer.cpp  Mixer.h  MusicPlayer.cpp  MusicPlayer.h  SoundPlayer.cpp  SoundPlayer.h
src/components/: Animation.h  AnimationData.h  AnimationSet.h  AnimationState.h  BeeAI.h  Box.h  Bullet.h  BulletPiece.h  Checkpoint.h  Collider.h  CollisionState.h  Enemy.h  EnemyDeath.h  Facing.h  GhostAI.h  Gravity.h  GroundPatrol.h  Health.h  Hidden.h  Jump.h  PlantAI.h  (+10 more)
(+254 files in other folders)
